@@ -2,6 +2,7 @@
 ------------------------------------------------------------------------
 - Feature: [#11512] Coloured usernames by group on multiplayer servers.
 - Feature: [#21734] Park admittance price can now be set via text input.
+- Feature: [#21957] [Plugin] Expose whether the game is paused to the plugin API.
 - Improved: [#21728] “Fix all rides” cheat now also works if a mechanic is already fixing the ride.
 - Improved: [#21769] Expose “animation is backwards” wall property in Tile Inspector.
 - Improved: [#21855] Add a separator between “Load Game” and “Save Game”, to avoid accidental overwriting.
